# mine

./: Cargo.toml  MULTIADDR.20251105_092505.txt  MULTIADDR.20251106_004819.txt  MULTIADDR.20251106_004930.txt  README.md  addresslist.txt  chayvottungaddresstheolist.py  chuasubmit.csv  fullauto&workerrandom.py  fullautoaddress&misslist.py  fullmanualinput.py  getchallenge.csv  nounce.txt  py_miner.py  py_miner1.py  requirements.txt  submit.sh  submitcall.ps1
ashdaemon/: Cargo.toml  README.md
ashdaemon/.cargo/: config.toml
ashdaemon/src/: main.rs
src/: main.rs
