[package]
name = "ashdaemon"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
sha2 = "0.10"
anyhow = "1.0"
mimalloc = { version = "0.1", default-features = false }

# Use ce-ashmaize crate from local path or git.
# Option A: local path (if you cloned repo inside this workspace next to Cargo.toml)
# Updated to point to the `ce-ashmaize` folder inside this repository.
ashmaize = { path = "./ce-ashmaize" }
ash = "0.38.0"
winit = "0.30.12"
env_logger = "0.11.8"
log = "0.4.28"

# Option B: use git (if you prefer)
# ce-ashmaize = { git = "https://github.com/input-output-hk/ce-ashmaize" }

[profile.release]
lto = true
codegen-units = 1
[features]
default = ["native_ashmaize"]
native_ashmaize = []

